[package]
name = "castle-game"
version = "0.1.31"
authors = ["Thomas Versteeg <thomasversteeg@gmx.com>"]
license = "GPL-3.0"
homepage = "https://github.com/tversteeg/castle-game"

readme = "README.md"
description = "2D destructible terrain strategy game"

repository = "https://github.com/tversteeg/castle-game.git"
keywords = ["game", "2d", "destructible"]
categories = ["games"]

build = "build.rs"

[badges]
travis-ci = {repository = "tversteeg/castle-game"}
is-it-maintained-issue-resolution = {repository = "tversteeg/castle-game"}

[dependencies]
minifb = "0.10"
specs = "0.10"
specs-derive = "0.1"
cgmath = "0.16"
rhusics = "0.2"

[dependencies.blit]
version = "0.5"
default-features = false
features = ["aseprite"]

[build-dependencies]
git2 = "0.7"
blit = "0.5"
image = "0.18"
aseprite = "0.1"
serde_json = "1.0"
